update: новая версия проекта

--- a/index.html
+++ b/index.html
@@ -100,11 +100,97 @@
                 </ul>
               </address>
             </div>
-            <!-- <button class="header-container__burger" type="button">
+            <button
+              class="header-container__burger menu-btn-open"
+              type="button"
+            >
               <svg class="icon-burger" width="24" height="24">
                 <use href="./images/svg-sprite.svg#icon-burger"></use>
               </svg>
-            </button> -->
+            </button>
+            <div class="mobile-menu burger">
+              <div class="brand-logo">
+                <p class="intro-title" lang="en">
+                  <span>beauty</span>
+                  <span>zone</span>
+                </p>
+              </div>
+              <button
+                class="mobile-menu__btn-close menu-btn-close"
+                type="button"
+              >
+                <svg class="burger__close-icon" width="24" height="24">
+                  <use href="./images/svg-sprite.svg#icon-Close"></use>
+                </svg>
+              </button>
+              <div class="burger__nav">
+                <nav class="burger__navigation">
+                  <ul class="burger__list">
+                    <li>
+                      <a class="burger__link" href="#about-us">Про нас</a>
+                    </li>
+                    <li>
+                      <a class="burger__link" href="#about-advantages"
+                        >Чому ми</a
+                      >
+                    </li>
+                    <li>
+                      <a class="burger__link" href="#services-list"
+                        >Наші процедури</a
+                      >
+                    </li>
+                    <li>
+                      <a class="burger__link" href="#contact-us">Контакти</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="burger__adress">
+                <address class="burger__contacts">
+                  <ul class="burger__logo-contacts">
+                    <li>
+                      <a href="tel:+380960000007">
+                        <svg
+                          class="burger__address-icon"
+                          width="32"
+                          height="32"
+                        >
+                          <use
+                            href="./images/svg-sprite.svg#icon-call-logo"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.facebook.com/" target="_blank">
+                        <svg
+                          class="burger__address-icon"
+                          width="32"
+                          height="32"
+                        >
+                          <use
+                            href="./images/svg-sprite.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/" target="_blank">
+                        <svg
+                          class="burger__address-icon"
+                          width="32"
+                          height="32"
+                        >
+                          <use
+                            href="./images/svg-sprite.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </address>
+              </div>
+            </div>
           </div>
         </div>
         <div class="container">
@@ -357,9 +443,6 @@
             <iframe
               class="contact-section__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.475791668505!2d30.775223399999994!3d50.50671339999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0LLRg9C70LjRhtGPINCi0LDRgNCw0YHQsCDQqNC10LLRh9C10L3QutCwLCA1LCDQkdGA0L7QstCw0YDQuCwg0JrQuNGX0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgMDc0MDA!5e0!3m2!1suk!2sua!4v1744460593812!5m2!1suk!2sua"
-              width="605"
-              height="481"
-              style="border: 0; border-radius: 32px"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
@@ -435,7 +518,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__contact-us-container" id="contact-us">
-          <div class="brand-logo">
+          <div class="brand-logo footer__logo">
             <p class="intro-title" lang="en">
               <span>beauty</span>
               <span>zone</span>
@@ -520,7 +603,10 @@
             </address>
           </div>
           <div class="footer__privacy-policy">
-            <a class="footer__address-link" href="#" target="_blank"
+            <a
+              class="footer__address-link footer__privacy-text"
+              href="#"
+              target="_blank"
               >Політика конфіденційності</a
             >
             <p class="footer__copyright">&copy; 2022 Дані захищені</p>
@@ -601,5 +687,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/formats-slider.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
